--- a/NPOIPlusConsoleExample/NPOIPlusConsoleExample.csproj
+++ b/NPOIPlusConsoleExample/NPOIPlusConsoleExample.csproj
@@ -1,13 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\NPOIPlus\NPOIPlus.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\NPOIPlus\NPOIPlus.csproj" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+		<None Update="Resources\Test.xlsx">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
