--- a/NPOIPlus/NPOIPlus.csproj
+++ b/NPOIPlus/NPOIPlus.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="NPOI" Version="2.7.1" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
