chore: prepare for release 1.0.0

--- a/NPOIPlus/NPOIPlus.csproj
+++ b/NPOIPlus/NPOIPlus.csproj
@@ -2,6 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    
+    <!-- NuGet Package Metadata -->
+    <PackageId>NPOIPlus</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>HouseAlwaysWin</Authors>
+    <Company>HouseAlwaysWin</Company>
+    <Product>NPOIPlus</Product>
+    <Description>基於 NPOI 的流暢（Fluent）風格 Excel 操作庫，提供更直觀、更易用的 API 來讀寫 Excel 文件。A fluent-style Excel operation library based on NPOI, providing more intuitive and easier-to-use APIs for reading and writing Excel files.</Description>
+    <PackageTags>NPOI;Excel;Fluent;XLSX;XLS;Office;Spreadsheet</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/HouseAlwaysWin/NPOIPlus</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/HouseAlwaysWin/NPOIPlus</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +28,11 @@
   <ItemGroup>
     <PackageReference Include="NPOI" Version="2.7.1" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
+  <!-- Include README.md in NuGet package -->
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
