--- a/NPOIPlus/NPOIPlus.csproj
+++ b/NPOIPlus/NPOIPlus.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     
     <!-- NuGet Package Metadata -->
-    <PackageId>NPOIPlusLib</PackageId>
+    <PackageId>NPOIPlus</PackageId>
     <Version>1.0.0</Version>
     <Authors>HouseAlwaysWin</Authors>
     <Company>HouseAlwaysWin</Company>
