--- a/NPOIPlusConsoleExample/NPOIPlusConsoleExample.csproj
+++ b/NPOIPlusConsoleExample/NPOIPlusConsoleExample.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\NPOIPlus\NPOIPlus.csproj" />
+		<ProjectReference Include="..\FluentNPOI\FluentNPOI.csproj" />
 	</ItemGroup>
 
 
