chore: Update System.Drawing.Common to version 6.0.0 and suppress XML documentation warnings
- Updated System.Drawing.Common package version from 10.0.0 to 6.0.0.
- Added suppression for XML documentation warnings (code 1591) in the project file.
- Updated method parameter documentation in FluentNPOIExtensions.cs for clarity.
- Enhanced FluentSheet and FluentWorkbook classes with additional methods and documentation for better usability.

--- a/FluentNPOI/FluentNPOI.csproj
+++ b/FluentNPOI/FluentNPOI.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <NoWarn>$(NoWarn);1591</NoWarn>
     
     <!-- NuGet Package Metadata -->
     <PackageId>FluentNPOI</PackageId>
@@ -27,7 +28,7 @@
 
   <ItemGroup>
     <PackageReference Include="NPOI" Version="2.7.1" />
-    <PackageReference Include="System.Drawing.Common" Version="10.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
   <!-- Include README.md in NuGet package -->
