--- a/FluentNPOIUnitTest/FluentNPOIUnitTest.csproj
+++ b/FluentNPOIUnitTest/FluentNPOIUnitTest.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FluentNPOI\FluentNPOI.csproj" />
+    <ProjectReference Include="..\FluentNPOI.Streaming\FluentNPOI.Streaming.csproj" />
   </ItemGroup>
 
 </Project>
