--- a/FluentNPOIConsoleExample/FluentNPOIConsoleExample.csproj
+++ b/FluentNPOIConsoleExample/FluentNPOIConsoleExample.csproj
@@ -9,6 +9,7 @@
         <ProjectReference Include="..\FluentNPOI\FluentNPOI.csproj" />
         <ProjectReference Include="..\FluentNPOI.Pdf\FluentNPOI.Pdf.csproj" />
         <ProjectReference Include="..\FluentNPOI.Streaming\FluentNPOI.Streaming.csproj" />
+        <ProjectReference Include="..\FluentNPOI.Charts\FluentNPOI.Charts.csproj" />
     </ItemGroup>
     <ItemGroup>
         <None Update="Resources\Test.xlsx">
