feat: Add chart generation module and update main README to reflect modular package structure.

--- a/FluentNPOIUnitTest/FluentNPOIUnitTest.csproj
+++ b/FluentNPOIUnitTest/FluentNPOIUnitTest.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FluentNPOI\FluentNPOI.csproj" />
     <ProjectReference Include="..\FluentNPOI.Streaming\FluentNPOI.Streaming.csproj" />
+    <ProjectReference Include="..\FluentNPOI.Charts\FluentNPOI.Charts.csproj" />
   </ItemGroup>
 
 </Project>
